--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${SQL_URL:jdbc:mysql://localhost:3307/epers_tactics?createDatabaseIfNotExist=true&serverTimezone=UTC}
+spring.datasource.url=${SQL_URL:jdbc:mysql://localhost:3307/divicuentas?createDatabaseIfNotExist=true&serverTimezone=UTC}
 spring.datasource.username=${SQL_USER:root}
 spring.datasource.password=${SQL_PASSWORD:12345678}
 spring.datasource.driver.class=${SQL_DRIVER:com.mysql.cj.jdbc.Driver}
