--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.datasource.url=${SQL_URL:jdbc:mysql://localhost:3307/divicuentas?createDatabaseIfNotExist=true&serverTimezone=UTC}
+spring.datasource.url=${SQL_URL:jdbc:mysql://localhost:3306/divicuentas?createDatabaseIfNotExist=true&serverTimezone=UTC}
 spring.datasource.username=${SQL_USER:root}
-spring.datasource.password=${SQL_PASSWORD:12345678}
+spring.datasource.password=${SQL_PASSWORD:root}
 spring.datasource.driver.class=${SQL_DRIVER:com.mysql.cj.jdbc.Driver}
 spring.jpa.properties.hibernate.dialect = ${HIBERNATE_DIALECT:org.hibernate.dialect.MySQL8Dialect}
 
 # DDL generation
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
