--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start::mock": "REACT_APP_USE_MOCK_API=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
